# vivaldi

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: coordinate.rs  lib.rs  model.rs  vector.rs
src/vector/: dimension_2.rs  dimension_3.rs
