[package]
name = "vivaldi"
version = "0.1.0"
authors = ["Dom <dom@itsallbroken.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", optional = true, features = ["derive"] }
rand = "0.7.3"

# For the serde test code
[dev-dependencies]
serde_json = "1.0"